<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ScoreFragment"
    android:background="@color/white">

    <include
        android:id="@+id/included_topbar"
        layout="@layout/layout_topbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_scores"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/included_topbar"/>

    <TextView
        android:id="@+id/tv_earned_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/earned_score"
        android:textColor="@color/black1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_score" />

    <TextView
        android:id="@+id/tv_total_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_score"
        android:textColor="@color/black1"
        android:textStyle="bold"
        android:textSize="14sp"
        android:fontFamily="@font/inter_medium"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_score"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_earned_score"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_earned_score"
        app:layout_constraintStart_toStartOf="@+id/tv_earned_score"
        app:layout_constraintTop_toBottomOf="@+id/tv_earned_score">

        <TextView
            android:id="@+id/tv_earned_score_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dummy_score"
            android:gravity="center"
            android:textColor="@color/black1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/inter_medium"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_total_score"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_total_score"
        app:layout_constraintStart_toStartOf="@+id/tv_total_score"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_score">

        <TextView
            android:id="@+id/tv_total_score_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dummy_score"
            android:gravity="center"
            android:textColor="@color/black1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/inter_medium"/>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_play_again"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_round_8_blue"
        android:fontFamily="@font/inter_medium"
        android:letterSpacing="0.0"
        android:text="@string/play_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_earned_score" />

</androidx.constraintlayout.widget.ConstraintLayout>