<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/included_topbar"
                layout="@layout/layout_topbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_quick_mode"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginStart="24dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="30dp"
                app:cardElevation="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/included_topbar">

                <TextView
                    android:id="@+id/tv_quick_mode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/quick_mode"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter_medium"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_history"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="30dp"
                app:cardElevation="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/included_topbar">

                <TextView
                    android:id="@+id/tv_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/history"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter_medium"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_quick_mode" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white1"
                app:boxBackgroundMode="outline"
                app:endIconTint="@color/grey1"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_category">

                <AutoCompleteTextView
                    android:id="@+id/tv_category_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_round_4_white1_stroke_bule1"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="start|center_vertical"
                    android:hint="@string/select_category"
                    android:inputType="none"
                    android:padding="0dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black1"
                    android:textColorHint="@color/grey1"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_difficulty_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/difficulty_level"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_category" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_difficulty_level"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white1"
                app:boxBackgroundMode="outline"
                app:endIconTint="@color/grey1"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_difficulty_level">

                <AutoCompleteTextView
                    android:id="@+id/tv_difficulty_level_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_round_4_white1_stroke_bule1"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="start|center_vertical"
                    android:hint="@string/select_difficulty_level"
                    android:inputType="none"
                    android:padding="0dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black1"
                    android:textColorHint="@color/grey1"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_difficulty_level" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white1"
                app:boxBackgroundMode="outline"
                app:endIconTint="@color/grey1"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_type">

                <AutoCompleteTextView
                    android:id="@+id/tv_type_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_round_4_white1_stroke_bule1"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="start|center_vertical"
                    android:hint="@string/select_type"
                    android:inputType="none"
                    android:padding="0dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black1"
                    android:textColorHint="@color/grey1"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_round_8_blue"
                android:fontFamily="@font/inter_medium"
                android:letterSpacing="0.0"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_type" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>